--- a/app/src/main/res/menu/menulogout.xml
+++ b/app/src/main/res/menu/menulogout.xml
@@ -1,9 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:app="http://schemas.android.com/apk/res-auto"
+<menu xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:id="@+id/Configuracion"
-        android:title="@string/Configuracion" />
+        android:id="@+id/Claro"
+        android:title="@string/menuitem1" />
+    <item
+        android:id="@+id/Oscuro"
+        android:title="@string/menuitem2" />
     <item
         android:id="@+id/singout"
         android:title="@string/SinOut"
